--- a/.github/workflows/master_crm-group-6-java-16-cybersoft.yml
+++ b/.github/workflows/master_crm-group-6-java-16-cybersoft.yml
@@ -20,6 +20,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
+      
+      - name: go to work space
+        run: cd crm
 
       - name: Build with Maven
         run: mvn clean install
@@ -28,7 +31,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/crm/target/*.war'
 
   deploy:
     runs-on: ubuntu-latest
