--- a/.github/workflows/master_crm-group-6-java-16-cybersoft.yml
+++ b/.github/workflows/master_crm-group-6-java-16-cybersoft.yml
@@ -28,14 +28,14 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/crm/target/*.war'
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}/crm
 
     steps:
       - name: Download artifact from build job
