--- a/.github/workflows/master_cmr-group-6-java-16-cybersoft.yml
+++ b/.github/workflows/master_cmr-group-6-java-16-cybersoft.yml
@@ -22,13 +22,13 @@ jobs:
           java-version: '11'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: cd crm && mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}crm/target/*.jar'
 
   deploy:
     runs-on: windows-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'cmr-group-6-java-16-cybersoft'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3E0E8D604F6240D393B623484F4691B6 }}
-          package: '*.war'
+          package: '*.jar'
