--- a/.github/workflows/master_crm-group-6-java-16-cybersoft.yml
+++ b/.github/workflows/master_crm-group-6-java-16-cybersoft.yml
@@ -22,13 +22,13 @@ jobs:
           java-version: '11'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: cd crm && mvn clean install
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: '${{ github.workspace }}/crm/target/*.war'
 
   deploy:
     runs-on: windows-latest
@@ -50,4 +50,4 @@ jobs:
           app-name: 'crm-group-6-java-16-cybersoft'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_AAAA8D91D7924625BD80290E382E39A1 }}
-          package: '*.jar'
+          package: '*.war'
